# pygradient

./: .flake8  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml
pygradient/: models.py  server.py
